# karatemeter

./: .gitignore  CMakeLists.txt  README.md  TESTLIST.md
arduino/: Makefile  library.properties.template
arduino/karatemeterino.src/: karatemeterino.h  karatemeterino.ino
doc/img/: cover.xcf  ifsomethinghappenswarranty.xcf  parts.xcf
include/config/: CMakeLists.txt  displayconfig.h  impactconfig.h  typeconfig.h
include/display/: CMakeLists.txt  Display.h
include/impact/: CMakeLists.txt  Calculate.h  Impact.h  Peak.h
include/minlib/: CMakeLists.txt  MaxQueue.h
include/sparring/: CMakeLists.txt  GroanLevel.h  Sparring.h
include/usecase/: CMakeLists.txt  MeasureAndDisplayByModeUseCase.h
kicad/karatemeter/: karatemeter-cache.lib  karatemeter.pro  karatemeter.sch  karatemeter.sch-bak
src/: CMakeLists.txt
src/display/: MonochromeDisplay.c
src/impact/: Accelerometer3AxesImpact.c  ArrayPeak.c  MonoAccelerometerImpact.c  Shared_Calculate.c
src/minlib/: CachedMaxQueue.c
src/sparring/: AudibleSparring.c
src/usecase/: MeasureAndDisplayByModeUseCase.c
test/: CMakeLists.txt  CalculateTest.cpp  DisplayTest.cpp  ImpactTest.cpp  MaxQueueTest.cpp  MeasureAndDisplayByModeUseCaseTest.cpp  MonoImpactTest.cpp  PeakTest.cpp  RunAllTests.cpp  SparringTest.cpp
